# OpenWeatherAPI-C

./: .gitmodules  CMakeLists.txt  OpenWeatherAPI.sln  OpenWeatherAPI.vcxproj  OpenWeatherAPI.vcxproj.filters  README.md
include/: weather_app.h
src/: main.c  weather_app.c
